Better table style for language selector to prevent overlapping columns for large language codes.

--- a/frontend/app/shared/components/contents/content-status.component.scss
+++ b/frontend/app/shared/components/contents/content-status.component.scss
@@ -24,5 +24,5 @@
 }
 
 .label {
-    color: lighten($color-text, 20%) !important;
+    color: $color-text !important;
 }
